processor/src/test/resources/good/inheritance/DefaultMethodOverrideSuperType.java
package inheritance;

import io.norberg.automatter.AutoMatter;

@AutoMatter
interface DefaultMethodOverrideSuperType {

  String field();

  String overrideMe();
}
