processor/src/test/resources/bad/BadBuilderReturnType.java
import io.norberg.automatter.AutoMatter;

@AutoMatter
public interface BadBuilderReturnType {
  String builder();
}